--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,13 @@ dependencies:
   another_flushbar: ^1.10.29
   dropdown_button2: ^1.9.1
   image_picker:
+  auto_route: ^5.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  auto_route_generator: ^5.0.3
+  build_runner:
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
