--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dropdown_button2: ^1.9.1
   image_picker:
   auto_route: ^5.0.4
+  readmore: ^2.2.0
 
 dev_dependencies:
   flutter_test:
